tests/parsing/smtlib/poly/errors/015_sorted_var_unclosed_2.psmt2
(set-logic ALL)
(assert (forall ((x int foo)) x))
