tests/parsing/smtlib/poly/errors/015_sorted_var_unclosed_2.expected
File "tests/parsing/smtlib/poly/errors/015_sorted_var_unclosed_2.psmt2", line 2, character 24-27:
Error while parsing a sorted variable, read the symbol 'foo',
      but expected a closing parenthesis.
